boost1.53 (1.53.0-2) unstable; urgency=low

  * rules: Build with hardening flags.
  * control: Depend on dpkg-dev, to get dpkg-buildflags.

 -- Steve M. Robbins <smr@debian.org>  Thu, 07 Mar 2013 00:58:54 -0600

boost1.53 (1.53.0-1) unstable; urgency=low

  * New upstream.  Update versions in control, rules.  Update file lists
    in documentation-files and example-files.

  * rules: Stop creating "libboost_foo-mt" compatibility symlinks.
    Rewrite rules using "dh".  README.Debian and NEWS.Debian no longer
    ship in all packages.
  
  * control: Add packages for atomic, context.  Remove empty package for
    mpi-python-dev.

 -- Steve M. Robbins <smr@debian.org>  Tue, 05 Mar 2013 22:14:47 -0600

boost1.52 (1.52.0-1) UNRELEASED; urgency=low

  * New upstream.

 -- Steve M. Robbins <smr@debian.org>  Sun, 06 Jan 2013 19:04:00 -0600

boost1.50 (1.50.0-2) unstable; urgency=low

  * control: Fix list formatting in Boost.Chrono long description.
    Closes: #687296.  Add symlink /usr/share/doc/libboost-doc/examples;
    see #687524.
  
  * rules: Install libs/date_time/data into
    /usr/share/doc/libboost-date-timeX.Y-dev.  Closes: #685003.

 -- Steve M. Robbins <smr@debian.org>  Sun, 23 Sep 2012 21:33:04 -0500

boost1.50 (1.50.0-1) unstable; urgency=low

  * Upstream release of 1.50.0.

 -- Steve M. Robbins <smr@debian.org>  Thu, 28 Jun 2012 21:28:37 -0500

boost1.50 (1.50.0~beta1final-1) experimental; urgency=low

  * New upstream.  This is really the "1.50.0 Beta 1" release.  Last
    release was actually "1.50.0 Beta 1 Release Candidate".

 -- Steve M. Robbins <smr@debian.org>  Fri, 08 Jun 2012 21:59:28 -0500

boost1.50 (1.50.0~beta1-1) experimental; urgency=low

  * New upstream: Beta 1 release of 1.50.
    - new lib packages for Boost.Exception.

  * patches/gcc4.7_trac-6790.patch:
  * patches/gcc4.7_trac-6854.patch:
  * patches/gcc4.7_trac-6755.patch:
  * patches/gcc4.7_trac-76970.patch:
  * patches/gcc4.7_trac-6331.patch:
  * patches/gcc4.7_trac-6431.patch: